# CoCoMET

./: .gitignore  .nfs000000001cb05c0400000b79  .readthedocs.yaml  LICENSE  README.md  dev-requirements.txt  environment.yml  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: check_black_formatting.yml  docs.yml  pylint.yml  python-package.yml  run_tests.yml
.virtual_documents/: Untitled.ipynb
.virtual_documents/Examples/: CoMET_start_example.ipynb
.virtual_documents/examples/: CoMET_start_example.ipynb
CoCoMET/: __init__.py  goes_load.py  goes_tams.py  goes_tobac.py  mesonh_calculate_products.py  mesonh_load.py  mesonh_moaap.py  mesonh_tams.py  mesonh_tobac.py  mesonhcube.py  multi_nexrad_load.py  multi_nexrad_tobac.py  nexrad_load.py  nexrad_tobac.py  post_processor.py  rams_calculate_products.py  rams_configure.py  rams_load.py  rams_moaap.py  rams_tams.py  rams_tobac.py  ramscube.py  run_tracker_wrapper.py  standard_radar_load.py  standard_radar_tobac.py  tracker_output_translation_layer.py  user_interface_layer.py  wrf_calculate_products.py  wrf_load.py  wrf_moaap.py  wrf_tams.py  wrf_tobac.py  wrfcube.py
CoCoMET/MOAAP/: tracking_functions.py
CoCoMET/TAMS/: __init__.py  tracking_functions.py
CoCoMET/analysis/: __init__.py  analysis_object.py  calc_var.py  calculate_arm_products.py  calculate_bulk_cell_statistics.py  calculate_convective_properties.py  merge_split_detection.py
CoCoMET/tests/: config_for_tests.yml  create_test_objects.py  test_cocomet_full.py
CoCoMET/user_utils/: __init__.py  bulk_statistics_funcs.py
CoMET/: __init__.py  create_test_objects.py  goes_load.py  goes_tobac.py  mesonh_calculate_products.py  mesonh_load.py  mesonh_moaap.py  mesonh_tams.py  mesonh_tobac.py  mesonhcube.py  multi_nexrad_load.py  multi_nexrad_tobac.py  nexrad_load.py  nexrad_tobac.py  post_processor.py  rams_calculate_products.py  rams_configure.py  rams_load.py  rams_moaap.py  rams_tams.py  rams_tobac.py  ramscube.py  run_tracker_wrapper.py  standard_radar_load.py  standard_radar_tobac.py  tracker_output_translation_layer.py  user_interface_layer.py  wrf_calculate_products.py  wrf_load.py  wrf_moaap.py  wrf_tams.py  wrf_tobac.py  wrfcube.py
CoMET.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
CoMET/MOAAP/: __init__.py  tracking_functions.py
CoMET/TAMS/: __init__.py  tracking_functions.py
Example_Configs/: boilerplate.yml  wrf_dbz_config.yml  wrf_tb_config.yml  wrf_test_config_dbz.yml  wrf_test_config_tb.yml  wrf_test_config_w.yml  wrf_w_config.yml
Examples/: CoMET_start_example.ipynb
docs/: CoCoMET.html  CoMET.html  index.html  search.js
examples/: CoMET_start_example-rams.ipynb  CoMET_start_example.ipynb  TestFeatures.ipynb  example_model_comparison.ipynb  example_radar_standardized.ipynb  example_radar_standardized.py  saving_data_example.ipynb
(+111 files in other folders)
