[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CoMET"
version = "0.0.2"
dependencies = [
    'numpy<=1.26.4',
    'numba'
    'xarray',
    'netCDF4',
    'arm-pyart',
    'pandas',
    'geopandas',
    'cftime',
    'pyyaml',
    'vincenty',
    'iris',
    'tobac @ git+https://github.com/tobac-project/tobac.git@37ddd51'
]
authors = [
  { name="Travis Hahn", email="travis.hahn@psu.edu" },
]
description = "Convective cloud Model Evaluation Toolkit (CoMET)"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/travis-j-hahn/CoMET"
Issues = "https://github.com/travis-j-hahn/CoMET/issues"
