[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CoCoMET"
version = "0.1.0"
dependencies = [
    "numpy<=1.26.4",
    "numba",
    "xarray",
    "netCDF4",
    "arm-pyart",
    "pandas",
    "geopandas",
    "cftime",
    "pyyaml",
    "vincenty",
    "iris",
    "tobac @ git+https://github.com/tobac-project/tobac.git@37ddd51",
    "tqdm",
    "metpy",
    "scikit-image"
]
authors = [
  { name="Travis Hahn", email="travis.hahn@psu.edu" },
  { name="Hershel Weiner" },
  { name="Calvin Brooks" },
  { name="Jie Xi Li" },
  { name="Siddhant Gupta" },
  { name="Die Wang" }
]
description = "Community Convective cloud Model Evaluation Toolkit (CoCoMET)"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ASCENT-BNL/CoCoMET"
Issues = "https://github.com/ASCENT-BNL/CoCoMET/issues"